@@ -550,6 +550,7 @@ make distributions       - Builds and configures ${upper.project.short.name}  wi
                      <arg line="/DBUILDID=&quot;${build.timestamp}&quot;" />
                      <arg line="/DTIMESTAMP_URL=&quot;@{sign.timestamp.url}&quot;" />
                      <arg line="/DSIGN_SETUP_TIMESTAMP=&quot;${sign.setup.timestamp}&quot;" />
+                     <arg line="/DTARGET_VM=&quot;${targetVM}&quot;"/>
                      <arg line="${nsis.script}" />
                   </exec>
                </then>
@@ -587,6 +588,7 @@ make distributions       - Builds and configures ${upper.project.short.name}  wi
                         <arg line="/DBUILDID=&quot;${build.timestamp}&quot;" />
                         <arg line="/DTIMESTAMP_URL=&quot;@{sign.timestamp.url}&quot;" />
                         <arg line="/DSIGN_SETUP_TIMESTAMP=&quot;${sign.setup.timestamp}&quot;" />
+			<arg line="/DTARGET_VM=&quot;${targetVM}&quot;"/>
                         <arg line="${nsis.script}" />
                      </exec>
                   </then>
@@ -677,6 +679,7 @@ make distributions       - Builds and configures ${upper.project.short.name}  wi
                                                 <arg line="/DBUILDID=&quot;${build.timestamp}&quot;" />
                                                 <arg line="/DTIMESTAMP_URL=&quot;@{sign.timestamp.url}&quot;" />
                                                 <arg line="/DSIGN_SETUP_TIMESTAMP=&quot;${sign.setup.timestamp}&quot;" />
+						<arg line="/DTARGET_VM=&quot;${targetVM}&quot;"/>
                                                 <arg line="${nsis.script}" />
                                              </exec>
 
