@@ -1,4 +1,7 @@
 ###### TWE 5.3-1 RELEASED ######
+2016-01-06 Warut Dechma <warut@together.at>
+   # Only Java 8 is now offered during installation procedure
+   
 2015-12-24 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: Added support for new extended attribute "EVALUATE_DYNAMICSCRIPT_VARIABLE_FOR_TOOL_AGENT_ACTIVITIES"
 
